# MusicPlayer

./: .gitignore  README.md  build.py  build.sh  gradle.properties  lint.py
app/: build.gradle  my-release-key.keystore  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/c/: CMakeLists.txt  audio_player.c  audio_player.h  jni_wrapper.c
app/src/main/java/com/example/musicplayer/: ClearListTask.java  CompleteTask.java  ErrorTask.java  LogFileTask.java  LogHelper.java  MainActivity.java  MusicFile.java  MusicFileAdapter.java  MusicScanner.java  MusicService.java  PermissionHelper.java  PlayerController.java  ScanResultHandler.java
app/src/main/java/com/music/player/: Constant.java  (+25 more)
app/src/main/res/anim/: blink.xml  wave_anim.xml
app/src/main/res/drawable/: bg_loop_button.xml  btn_back.xml  btn_danger_round.xml  btn_dark_round.xml  btn_primary_round.xml  btn_save.xml  btn_stop_round.xml  dialog_background.xml  edittext_background.xml  ic_folder.xml  ic_next.xml  ic_notification_next_black.xml  ic_notification_pause_black.xml  ic_notification_play_black.xml  ic_notification_prev_black.xml  ic_pause.xml  ic_pause_small.xml  ic_play.xml  ic_play_small.xml  ic_prev.xml  ic_repeat.xml  ic_repeat_one.xml  ic_search.xml  ic_search_off.xml  ic_settings.xml  ic_shuffle.xml  ic_stop.xml  rounded_image.xml
app/src/main/res/layout/: activity_main.xml  activity_music_list.xml  activity_settings.xml  dialog_music_info.xml  item_music.xml  main.xml  page_album_art.xml  page_visualizer.xml
app/src/main/res/values/: colors.xml  log_levels_array.xml  strings.xml
(+25 files in other folders)
